--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,12 +8,12 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(255, 230, 0);
 			font-size: 300%;
 			text-align: center;
 			display: block;
 			position: absolute;
-			top: 100px;
+			top: 300px;
 			left: 0px;  /* <--- Change me! */
 		}
 		.board{
@@ -26,7 +26,7 @@
 <body class="board">
 	<!-- HTML for the box -->
 	<div class="box">?</div>
-
+	
 	<script>
 		(function(){
 			'use strict'
@@ -61,7 +61,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 
 			
 			/* 
@@ -70,7 +72,15 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				/* Your Code to Increase positionX by 10 HERE*/
+				positionX = positionX + speed
+				moveBoxTo(positionX)
+				if (positionX > boardWidth){
+					speed = speed * -1;
+				}
+				if (positionX < 0){
+					speed = speed * -1;
+				}
 
 			};
 
@@ -80,9 +90,15 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
-
+				positionX = 0;
+				points = points +1;
+				changeBoxText(points);
+				if (speed > 0){
+					speed = speed + 3;
+				}
+				else if (speed < 0){
+					speed = speed - 3;
+				}
 			};
 		})();
 	</script>
